# blackice

./: .gitignore  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  SKILL.md  blackice.py  claude_code_backend.py  loop.py  pyproject.toml  test_cli_mode.py  test_path_surface.py  two-pass-adversarial-review-pattern.md
tests/: test_clusterer.py  test_reduce.py
tests/fixtures/: generic_ledger.json
